Restauration et optimisation de l'Atelier - Session du 04/12/2024
 Fonctionnalités restaurées et améliorées :
- Restauration complète de App.tsx après git revert
- Intégration de StudioView avec 3 colonnes (Chat, Compilation, Idées)
- Ajout de ValidationModal pour la gravure des souvenirs
- Compilation automatique additive des textes narratifs
- Filtrage intelligent du message de bienvenue

 Corrections techniques :
- Fix handleValidationConfirm (accès metadata)
- Fix handleNewSequence (archivage messages + reset)
- Fix handleAutoCompile (logique additive + vérification user message)
- Ajout de lastCompiledMessageIdRef pour éviter doublons

 Améliorations IA (geminiService.ts) :
- Style 'Authentique' redéfini : simple, direct, oral
- Précisions sur longueurs (Court: 2-3 phrases, Moyen: 4-6, Long: max 10)
- Nouvelle règle de tissage narratif avec exemple concret
- Instructions pour éviter style romanesque en mode Authentique

 Navigation :
- Renommage 'Atelier'  'L'Atelier des Souvenirs'
- Restauration 'La Boutique des Souvenirs' dans navigation
- Nettoyage pages obsolètes (Guest, Mémoire Digitale)

 État : Stable et fonctionnel

--- a/PLUME-main/.env.example
+++ b/PLUME-main/.env.example
@@ -1,5 +1,36 @@
-# Configuration de l'API Gemini
-# Copiez ce fichier vers .env.local et remplissez avec votre vraie clé API
+# ========================================
+# PLUME - Configuration Environment
+# ========================================
+# 
+# INSTRUCTIONS:
+# 1. Copiez ce fichier vers .env.local
+# 2. Remplissez avec vos vraies clés API
+# 3. Ne commitez JAMAIS le fichier .env.local
+#
+# ========================================
 
-# Obtenez votre clé API Gemini sur: https://aistudio.google.com/app/apikey
-GEMINI_API_KEY=votre_cle_api_gemini_ici
+VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+
+# ----------------------------------------
+# Gemini AI Configuration
+# ----------------------------------------
+# Obtenez votre clé API sur: https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# ----------------------------------------
+# Optional: Monitoring & Analytics
+# ----------------------------------------
+# Sentry for error tracking (optional)
+# VITE_SENTRY_DSN=your_sentry_dsn_here
+
+# Google Analytics (optional)
+# VITE_GA_TRACKING_ID=your_ga_tracking_id_here
+
+# ----------------------------------------
+# Optional: Feature Flags
+# ----------------------------------------
+# Enable/disable features in development
+# VITE_ENABLE_VOICE_RECORDING=true
+# VITE_ENABLE_PHOTO_ANALYSIS=true
+# VITE_ENABLE_DIGITAL_MEMORY_IMPORT=true
