--- a/PLUME-main/Dockerfile
+++ b/PLUME-main/Dockerfile
@@ -1,4 +1,4 @@
-# ÉTAPE 1: Construction (Build Stage)
+# ÉTAPE 1: Construction (Build Stage) - PAS DE CHANGEMENT
 FROM node:18-alpine AS builder
 WORKDIR /app
 COPY package.json package-lock.json ./
@@ -6,21 +6,21 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-# ÉTAPE 2: Production (Runtime Stage) - SIMPLIFIÉE
+
+# ÉTAPE 2: Production (Runtime Stage) - UTILISATION DE SERVE
 FROM node:18-alpine AS runner
 WORKDIR /app
 
-# IMPORTANT : Au lieu de réinstaller les dépendances, nous copions
-# l'installation complète du BUILDER (y compris node_modules)
-COPY --from=builder /app /app 
+# Installe l'outil 'serve' globalement pour servir les fichiers statiques
+RUN npm install -g serve
 
-# Le dossier de sortie de Vite est "dist"
-# Nous copions le dossier 'dist' créé par la compilation.
-# (Cette ligne n'est plus strictement nécessaire si nous avons copié tout /app ci-dessus, mais laissons-la pour la clarté si vous faites un multi-stage build plus tard)
-# COPY --from=builder /app/dist ./dist 
+# Copie uniquement le dossier de distribution (compilé) de Vite
+COPY --from=builder /app/dist ./dist 
 
+# Cloud Run/Docker attend le port 8080
 ENV PORT 8080
 EXPOSE 8080
 
-# Lancement du serveur de prévisualisation Vite
-CMD ["npm", "run", "preview"]
+# Lancement de l'application avec 'serve' sur le port 8080, servant le dossier dist
+# -s : single-page application (important pour React/Vite)
+CMD ["serve", "-s", "dist", "-l", "8080"]
