--- a/PLUME-main/package.json
+++ b/PLUME-main/package.json
@@ -14,8 +14,9 @@
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.555.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-joyride": "^2.9.3",
     "recharts": "^3.5.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.13"
