--- a/PLUME-main/package.json
+++ b/PLUME-main/package.json
@@ -27,7 +27,7 @@
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "jsdom": "^27.2.0",
-    "typescript": "~5.8.2",
+    "typescript": "^5.9.3",
     "vite": "^6.2.0",
     "vitest": "^4.0.14"
   }
