feat: Add interactive help system, fix character counting, improve BookView

--- a/PLUME-main/.env.local.template
+++ b/PLUME-main/.env.local.template
@@ -4,8 +4,15 @@
 # 
 # INSTRUCTIONS:
 # 1. Copiez ce fichier vers .env.local
+#    Commande: cp .env.local.template .env.local
 # 2. Remplissez avec vos vraies clés API
 # 3. Ne commitez JAMAIS le fichier .env.local
+# 4. Redémarrez le serveur après modification (npm run dev)
+#
+# ⚠️ SÉCURITÉ CRITIQUE:
+# - Ne JAMAIS partager vos clés API
+# - Ne JAMAIS commit le fichier .env.local dans Git
+# - Le fichier .env.local est ignoré par Git (.gitignore)
 #
 # ========================================
 
@@ -13,11 +20,33 @@
 # Supabase Configuration (OBLIGATOIRE)
 # ----------------------------------------
 # Obtenez vos clés sur: https://app.supabase.com/project/_/settings/api
+# 
+# VITE_SUPABASE_URL: URL de votre projet Supabase
+# VITE_SUPABASE_ANON_KEY: Clé anonyme (publique)
+# 
+# ⚠️ Utilisez la clé ANON, pas la clé SERVICE_ROLE !
 VITE_SUPABASE_URL=https://tuezgyggesrebzfxeufr.supabase.co
-VITE_SUPABASE_ANON_KEY=
+VITE_SUPABASE_ANON_KEY=votre_cle_anon_ici
 
 # ----------------------------------------
 # Gemini AI Configuration (OBLIGATOIRE)
 # ----------------------------------------
 # Obtenez votre clé API sur: https://aistudio.google.com/app/apikey
-GEMINI_API_KEY=
+# 
+# GEMINI_API_KEY: Clé pour accéder à l'API Gemini Flash
+# ⚠️ Cette clé donne accès à l'IA. Ne la partagez JAMAIS !
+GEMINI_API_KEY=votre_cle_gemini_ici
+
+# ========================================
+# Vérification de la configuration
+# ========================================
+# Après avoir rempli ce fichier :
+# 1. Vérifiez qu'il n'y a pas d'espaces avant/après les valeurs
+# 2. Sauvegardez le fichier
+# 3. Redémarrez le serveur: Ctrl+C puis npm run dev
+# 4. L'application doit démarrer sans erreur de configuration
+# 
+# En cas de problème :
+# - Vérifiez que le fichier s'appelle bien ".env.local" (pas .txt)
+# - Vérifiez qu'il est à la racine du projet
+# - Consultez INSTRUCTIONS_ENV_LOCAL.md pour plus de détails
