--- a/PLUME-main/package.json
+++ b/PLUME-main/package.json
@@ -20,19 +20,16 @@
     "react-joyride": "^2.9.3",
     "recharts": "^3.5.0",
     "uuid": "^13.0.0",
-    "zod": "^4.1.13"
+    "zod": "^4.1.13",
+    "vite": "^6.2.0",
+    "@vitejs/plugin-react": "^5.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "autoprefixer": "^10.4.17",
-    "jsdom": "^27.2.0",
-    "postcss": "^8.4.35",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.9.3",
-    "vite": "^6.2.0",
     "vitest": "^4.0.14"
   }
 }
