fix: nuke package-lock and update build script to force fresh install

--- a/PLUME-main/package.json
+++ b/PLUME-main/package.json
@@ -1,11 +1,11 @@
 {
   "name": "plume-mvp-v3---assistant-biographe",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
