--- a/PLUME-main/package.json
+++ b/PLUME-main/package.json
@@ -22,9 +22,7 @@
     "uuid": "^13.0.0",
     "zod": "^4.1.13",
     "vite": "^6.2.0",
-    "@vitejs/plugin-react": "^5.0.0"
-  },
-  "devDependencies": {
+    "@vitejs/plugin-react": "^5.0.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^22.14.0",
