--- a/PLUME-main/package.json
+++ b/PLUME-main/package.json
@@ -11,23 +11,25 @@
   "dependencies": {
     "@google/genai": "^1.30.0",
     "@supabase/supabase-js": "^2.84.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/node": "^22.14.0",
+    "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.23",
     "crypto-js": "^4.2.0",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.555.0",
+    "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-joyride": "^2.9.3",
     "recharts": "^3.5.0",
-    "uuid": "^13.0.0",
-    "zod": "^4.1.13",
-    "vite": "^6.2.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@types/node": "^22.14.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.9.3",
-    "vitest": "^4.0.14"
+    "uuid": "^13.0.0",
+    "vite": "^6.2.0",
+    "vitest": "^4.0.14",
+    "zod": "^4.1.13"
   }
 }
